# bio-search

./: .gitignore  README.md  cord19.ipynb  pmcids.ipynb  pylucene.ipynb  pytest.ini
biocuration-front-end/: Readme.md  nx.json  (+3 more)
content-onboarding/: .gitignore  README.md  pyproject.toml
content-onboarding/.devcontainer/: Dockerfile  devcontainer.json
content-onboarding/biosearch_core/: app.py  bilava.py  bilava_app.py  check_documents.ipynb  export_indexing_data.py  import_to_db.py  move_data.ipynb  predict_labels.py  recreate_pdfigcapx.ipynb  test_bbox.ipynb  test_db_conn.ipynb  test_indexing.ipynb  wsgi_search.py
content-onboarding/biosearch_core/bilava/: bilava_figure.py  classifier.py  metrics.py  neighborhood.py  offload.py  offload_predict.py  onboard.py  process_figures.py  reduction.py  session.py  temp_chart.ipynb  test_bilava.ipynb  test_reduction.ipynb
content-onboarding/biosearch_core/controllers/: bilava.py  lucene_controller.py  search_controller.py
content-onboarding/biosearch_core/convert/: pdf_to_png.py
content-onboarding/biosearch_core/core_bilava/: bilava_figure.py  process_figures.py
content-onboarding/biosearch_core/data/: document.py  figure.py  search_result.py
content-onboarding/biosearch_core/db/: create.py  insert.py  model.py  select.py  update.py
content-onboarding/biosearch_core/db_importer/: bbox_reader.py  create_tables.py  import.py  import_training_data.py  importer.py  loaders.py  project.py  tables.py
content-onboarding/biosearch_core/indexing/: export.py  exporter.py  index.py  index_writer.py  lucene.py
content-onboarding/biosearch_core/managers/: import_manager.py  indexing_manager.py  predict_manager.py
content-onboarding/biosearch_core/prediction/: predict.py  predictor.py
content-onboarding/biosearch_core/preprocessing/: merge_gdx.py
content-onboarding/biosearch_core/segmentation/: Dockerfile  Readme.md  batch_segment.py  figsplit.sh  segment.py
content-onboarding/biosearch_core/segmentation/commands/: FigsplitCommand.py  figsplit_command.py
content-onboarding/content_onboarding/: bbox_reader.py  export_indexing_data.py  figure.py  import_manager.py  import_to_db.py  predict_labels.py  test_db_conn.ipynb  test_prediction.ipynb
content-onboarding/content_onboarding/db/: create.py  insert.py  model.py  select.py  update.py
content-onboarding/content_onboarding/managers/: base.py  import_manager.py  indexing_manager.py  predict_manager.py
content-onboarding/dockerfiles/bilava/: Dockerfile
content-onboarding/dockerfiles/indexer/: Dockerfile
content-onboarding/dockerfiles/lucene-dev/: Dockerfile
content-onboarding/dockerfiles/search-api/: Dockerfile  entrypoint.sh
content-onboarding/tests/: test_bbox_reader.py  test_bilava.py  test_content_onboarding.py  test_gdx_merger.py  test_import_manager.py  test_indexing.py
content-onboarding/tests/bilava/: create_tables.sql  create_tables_on_first_finish.sql  tests_bilava_on_first_finish.py
content-onboarding/tests/bilava/fake_project/definitions/: classifiers.json
content-onboarding/tests/predictions/: create_prediction_scenario.sql  test_predictor.py
content-onboarding/tests/sample_data/: .fakeenv  fake_cord19_metadata.csv
image-modalities-classifier/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
image-modalities-classifier/data/: captions_clef13.parquet  captions_clef16.parquet  chart_synth.parquet  clef.parquet  cts_covid_ct.parquet  cts_sars_cov2.parquet  inspect.ipynb  openi.parquet  tinman.parquet  udel.parquet  xrays_chest.parquet  xrays_nih.parquet  xrays_radiography.parquet
image-modalities-classifier/data/0/: cord19_electron_v1.parquet  cord19_experimental_v1.parquet  cord19_gel_v1.parquet  cord19_graphics_v1.parquet  cord19_microscopy_v1.parquet  cord19_molecular_v1.parquet  cord19_photography_v1.parquet  cord19_radiology_v1.parquet  covid19_electron_v1.parquet  covid19_graphics_v1.parquet  covid19_molecular_v1.parquet  covid19_photography_v1.parquet  experimental.parquet  graphics.parquet
image-modalities-classifier/data/1/: cord19_electron_v1.parquet  cord19_experimental_v1.parquet  cord19_gel_v1.parquet  cord19_graphics_2_v1.parquet  cord19_microscopy_v1.parquet  cord19_molecular_v1.parquet  cord19_photography_v1.parquet  cord19_radiology_v1.parquet
image-modalities-classifier/image_modalities_classifier/: sweep.py  test.ipynb  train.py
image-modalities-classifier/image_modalities_classifier/cifar10/: test.ipynb
image-modalities-classifier/image_modalities_classifier/corrections/: update_datasets.py
image-modalities-classifier/image_modalities_classifier/dataset/: baseline.ipynb  charts.py  clef.py  create_splits.py  data.ipynb  image_datamodule.py  image_dataset.py  openi.py  rad.py  resize_datasets.py  split_data.ipynb  transforms.py  udel.py  utils.py
image-modalities-classifier/image_modalities_classifier/models/: efficient.py  identity.py  modality_module.py  predict.py  resnet.py  t_resnet.py  test.ipynb  train.py  trainer.py
image-modalities-classifier/tests/: test_loaders.py  test_prediction.py  test_train.py
search-engine/: .flaskenv  .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
search-engine/.devcontainer/: Dockerfile  devcontainer.json
search-engine/nbs/: 02_gxd.ipynb  0_pylucene.ipynb  api.ipynb  convert_to_images.ipynb  convert_to_images.py  cord19.ipynb  gt.ipynb  gxd.ipynb  highlight.ipynb
search-engine/sample_data/: gdx_dict.json  small_cord_19.csv
search-engine/src/: app.py  delete_me.ipynb  download_coordinates.ipynb  download_gxd_figures.ipynb  download_images.ipynb  index.py  index_reader.py  index_writer.py  overlap.py  test_indexing.ipynb
search-engine/src/experiments/: overlap.py
search-engine/src/retrieval/: CordReader.py  cord19_to_indexes.py  cord19_to_parquet.py  document_details.py  index_reader.py  index_writer.py  models.py  prepare_cord19_indexing.py  search_results.py  utils.py
search-engine/src/utils/: prepare_cord19_indexing.py  utils.py
search-engine/tests/: test_data.csv  test_index_search.py  test_search_encoder.py
(+310 files in other folders)
