[tool.poetry]
name = "biosearch-core"
version = "0.1.0"
description = ""
authors = ["Juan Trelles <juantrelles@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# pandas = "^1.5.3"
# pyarrow = "^10.0.1"
# Pillow = "^9.4.0"
psycopg = {extras = ["binary"], version = "^3.1.8"}
python-dotenv = "^0.21.1"
tqdm = "^4.64.1"
flask = "^2.3.2"
flask-cors = "^3.0.10"
rich = "^13.3.2"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
umap-learn = "^0.5.3"
cudf-cu11 = { version="^23.02", source="rapids" }
dask-cudf-cu11 = { version="^23.02", source="rapids" }
cuml-cu11 = { version="^23.02", source="rapids" }
torch = "^1.13.1"
torchvision = "^0.14.1"
image_modalities_classifier = { git = "https://github.com/uic-evl/bio-search.git", subdirectory="image-modalities-classifier", branch="main" }

[[tool.poetry.source]]
name="rapids"
url="https://pypi.nvidia.com"
default=false
secondary=false

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"
black = "^22.12.0"
pylint = "^2.15.10"
pytest-postgresql = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
biosearch_core_export = 'biosearch_core.indexing.export:main'