[tool.poetry]
name = "image-modalities-classifier"
version = "0.1.0"
description = ""
authors = ["Juan Trelles <jtrell2@uic.edu>"]
readme = "README.md"
packages = [{include = "image_modalities_classifier"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "1.5.3"
scikit-learn = "1.2"
scikit-image = "^0.19.3"
iterative-stratification = "^0.1.7"
matplotlib = "^3.6.3"
pytorch-lightning = "^1.9.0"
wandb = "^0.13.9"
pyarrow = "^10.0.1"

# Optional dependencies due to its dependency on CUDA
torch = { version="^1.13.1", source="torch", optional = true }
torchvision = { version = "^0.14.1", source="torch", optional = true }

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu116"
default = false
secondary = true

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^22.12.0"
pylint = "^2.15.10"
ipykernel = "^6.20.2"

[tool.poetry.extras]
torch = ["torch", "torchvision"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train_image_modality_model = 'image_modalities_classifier.train:main'