[metadata]
name = biosearch_lucene
version = 0.1.0
description = Indexing and searching functions on Pylucene

[options]
install_requires = 
  pandas
  numpy
  pyarrow
  rich

# package_dir=
#   =src

# [options.packages.find]
# where=src

[options.extras_require]
dev = 
  pytest-cov
  pytest
  matplotlib
  ipykernel
  black
  pylint

[options.entry_points]
console_scripts = 
  parquet2lucene = src.index:main